Move all table name, type, mutation to Pascal case. Address composite keys issues